[gd_scene load_steps=13 format=3 uid="uid://dx7cvp3lvbh8e"]

[ext_resource type="Texture2D" uid="uid://b8owrgh3feya6" path="res://sprites/other/spr_energyReplenisher.png" id="1_8pees"]
[ext_resource type="Script" path="res://scripts/energyReplenisher.gd" id="2_x3ioo"]
[ext_resource type="Texture2D" uid="uid://brif2sd4jhdv0" path="res://sprites/other/replenisher/frame.png" id="3_k1ha6"]
[ext_resource type="Texture2D" uid="uid://cndp1m7culro4" path="res://sprites/other/replenisher/frame2.png" id="4_27k14"]
[ext_resource type="Texture2D" uid="uid://7t0y06sinc2c" path="res://sprites/other/replenisher/frame3.png" id="5_3m42d"]
[ext_resource type="Texture2D" uid="uid://bi1vpds3dxbyn" path="res://sprites/other/replenisher/frame4.png" id="6_l2fdx"]
[ext_resource type="AudioStream" uid="uid://nlsi064ydr3s" path="res://sounds/sfx_replenishPickup.ogg" id="7_ik2cj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uldhn"]
atlas = ExtResource("1_8pees")
region = Rect2(0, 0, 14, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp0g3"]
atlas = ExtResource("1_8pees")
region = Rect2(14, 0, 14, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_3aosy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uldhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp0g3")
}],
"loop": true,
"name": &"default",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"none",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4dieh"]
radius = 9.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_inbnd"]
frames = 4
speed_scale = 8.0
frame_0/texture = ExtResource("3_k1ha6")
frame_1/texture = ExtResource("4_27k14")
frame_1/duration = 1.0
frame_2/texture = ExtResource("5_3m42d")
frame_2/duration = 1.0
frame_3/texture = ExtResource("6_l2fdx")
frame_3/duration = 1.0

[node name="energyReplenisher" type="AnimatedSprite2D"]
z_index = 101
sprite_frames = SubResource("SpriteFrames_3aosy")
autoplay = "default"
frame_progress = 0.311237
script = ExtResource("2_x3ioo")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4dieh")
disabled = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
speed_scale = 0.7
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
texture = SubResource("AnimatedTexture_inbnd")
direction = Vector2(1, -90)
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
hue_variation_max = 0.83

[node name="kachin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ik2cj")
volume_db = -4.0
bus = &"Sound"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(10.4, 10.1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
